--- a/ui/index.html
+++ b/ui/index.html
@@ -1,20 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <link href="/ui/style.css" rel="stylesheet" />
+        <title>Tonedcandy's Webapp</title>
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp. This is Tonedcandy
-           <h4> This is a new heading</h4>
-		I've made some local changes
-
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+        <h1 style="font-family:Impact"><em>Hi All!</em></h1>
+        <p>This is my first webapp!</p>
+        <h3>Following are some of my favorite songs!</h3>
+        <ul style="color:pink">
+            <li ><a href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
+            <li ><a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
+            <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
+        </ul>
+        <p>Oh, and I'm also a big fan of KATY PERRY!</p>
+        <a href="http://www.katyperry.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Katy_Perry_logo.svg/2000px-Katy_Perry_logo.svg.png"/></a>
     </body>
+    
 </html>
