[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,16 +3,16 @@
     <head>
         <title>Tonedcandy's Webapp</title>
     </head>
-    <body>
-        <h1 style="font-family:Impact"><em>Hi All!</em></h1>
-        <p>This is my first webapp!</p>
-        <h3>Following are some of my favorite songs!</h3>
+    <body style="background-color:black">
+        <h1 style="font-family:Impact;color:pink"><em>Hi All!</em></h1>
+        <p style="color:pink">This is my first webapp!</p>
+        <h3 style="color:pink">Following are some of my favorite songs!</h3>
         <ul style="color:pink">
             <li ><a href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
             <li ><a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
             <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
         </ul>
-        <p>Oh, and I'm also a big fan of KATY PERRY!</p>
+        <p style="color:pink">Oh, and I'm also a big fan of KATY PERRY!</p>
         <a href="http://www.katyperry.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Katy_Perry_logo.svg/2000px-Katy_Perry_logo.svg.png"/></a>
     </body>
     
