--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
         </ul>
         <p style="color:pink">Oh, and I'm also a big fan of KATY PERRY!</p>
-        <a href="http://www.katyperry.com"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Katy_Perry_logo.svg/2000px-Katy_Perry_logo.svg.png"/></a>
+        <a href="http://www.katyperry.com"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/KatyPerryPrismaticLogo.png"/></a>
     </body>
     
 </html>
