[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
         </ul>
         <p style="color:pink">Oh, and I'm also a big fan of KATY PERRY!</p>
-        <a href="http://www.katyperry.com"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/KatyPerryPrismaticLogo.png"/></a>
+        <a href="http://www.katyperry.com"><img src="http://orig04.deviantart.net/1e03/f/2015/052/4/1/katy_perry_prism_logo_2_by_joseselenator-d8j01di.png"/></a>
     </body>
     
 </html>
