--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Tonedcandy's Webapp</title>
     </head>
-    <body style="background-color:black">
+    <body style="background-color:black" link="pink">
         <h1 style="font-family:Impact;color:pink"><em>Hi All!</em></h1>
         <p style="color:pink">This is my first webapp!</p>
         <h3 style="color:pink">Following are some of my favorite songs!</h3>
