--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
         <p style="color:pink">This is my first webapp!</p>
         <h3 style="color:pink">Following are some of my favorite songs!</h3>
         <ul style="color:pink">
-            <li ><a style="text-decoration:none" href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
+            <li ><a href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
             <li ><a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
             <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
         </ul>
