--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,9 @@
         <p style="color:pink">This is my first webapp!</p>
         <h3 style="color:pink">Following are some of my favorite songs!</h3>
         <ul style="color:pink">
-            <li ><a href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
-            <li ><a href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
-            <li ><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
+            <li ><a style="color:pink" href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
+            <li ><a style="color:pink" href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
+            <li ><a style="color:pink" href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
         </ul>
         <p style="color:pink">Oh, and I'm also a big fan of KATY PERRY!</p>
         <a href="http://www.katyperry.com"><img src="http://orig04.deviantart.net/1e03/f/2015/052/4/1/katy_perry_prism_logo_2_by_joseselenator-d8j01di.png"/></a>
