[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,11 +3,11 @@
     <head>
         <title>Tonedcandy's Webapp</title>
     </head>
-    <body style="background-color:black" link="pink">
+    <body style="background-color:black" >
         <h1 style="font-family:Impact;color:pink"><em>Hi All!</em></h1>
         <p style="color:pink">This is my first webapp!</p>
         <h3 style="color:pink">Following are some of my favorite songs!</h3>
-        <ul style="color:pink">
+        <ul >
             <li ><a style="color:pink" href="https://www.youtube.com/watch?v=XjwZAa2EjKA">Unconditionally- Katy Perry</a></li>
             <li ><a style="color:pink" href="https://www.youtube.com/watch?v=RB-RcX5DS5A">The Scientist- Coldplay</a></li>
             <li ><a style="color:pink" href="https://www.youtube.com/watch?v=VPRjCeoBqrI">A Sky Full of Stars- Coldplay</a></li>
