--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Tonedcandy | Homepage</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="/ui/main.css">
     </head>
 <div class="container">
     <body>
