[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
         <div class="article1" >
             <h2><strong>Head Or Heart </strong>-<em>Christina Perri</em></h2>
             <p>Head or Heart is the second studio album by American singer-songwriter Christina Perri, released on April 1, 2014, via Atlantic Records.It is Perri's first full-length release since her last studio album, Lovestrong (2011). It was originally expected to be released on March 11, 2014, but was pushed back to April 1, 2014.</p>
-            <img src="/ui/christina%20perri-%20Head%20or%20heart.jpg" height="310" width="310"/>
+            <img src="ui/christina%20perri-%20Head%20or%20heart.jpg" height="310" width="310"/>
             <table style="display:inline-block; position:absolute;">
                 <tr><th>No.</th>
                 <th>Title</th>
