[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
             <div class="article1" >
             <h2><strong>Head Or Heart </strong>-<em>Christina Perri</em></h2>
             <p>Head or Heart is the second studio album by American singer-songwriter Christina Perri, released on April 1, 2014, via Atlantic Records.It is Perri's first full-length release since her last studio album, Lovestrong (2011). It was originally expected to be released on March 11, 2014, but was pushed back to April 1, 2014.</p>
-            <img src="headorheart.jpg" height="250" width="250"/>
+            <img src="/ui/headorheart.jpg" height="250" width="250"/>
                 <div class="tab">
             <table>
                 <tr><th>No.</th>
