[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,15 +8,15 @@
         <body>
             <div class="header-container">
                 <div class="header">
-                    <img src="toned.png">
+                    <img src="/ui/toned.png">
                     </div>
             </div>
            
             <nav>
                 <ul>
-                    <li><a class="nav-button" href="#"><div class="button-img"><img src="home.jpg"></div>Home</a></li>
-                    <li><a class="nav-button" href="#"><div class="button-img"><img src="save.jpg"></div>Archive</a></li>
-                    <li><a class="nav-button" href="#"><div class="button-img"><img src="bird.jpg"></div>Contact</a></li>
+                    <li><a class="nav-button" href="#"><div class="button-img"><img src="/ui/home.jpg"></div>Home</a></li>
+                    <li><a class="nav-button" href="#"><div class="button-img"><img src="/ui/save.jpg"></div>Archive</a></li>
+                    <li><a class="nav-button" href="#"><div class="button-img"><img src="/ui/bird.jpg"></div>Contact</a></li>
                 </ul>
                 </nav>
             <div class="content">
